--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -100,9 +100,9 @@
                 </div>
             </div>
 
-
             <div class="columns mt-5">
 
+                <!-- Aktuellstes Video mit erweiterten Infos -->
                 <div class="column is-6">
                     <article class="panel is-info">
                         <p class="panel-heading">
@@ -111,8 +111,20 @@
                         <div class="panel-block">
                             <div th:if="${video != null}">
                                 <p class="has-text-black"><strong class="has-text-black">Titel:</strong> <span th:text="${video.name}">Titel</span></p>
+                                <p class="has-text-black"><strong class="has-text-black">ID:</strong> <span th:text="${video._id}">ID</span></p>
+                                <p class="has-text-black"><strong class="has-text-black">Pfad:</strong> <span th:text="${video.path}">/media/video.mp4</span></p>
                                 <p class="has-text-black"><strong class="has-text-black">Erstellt am:</strong> <span th:text="${#temporals.format(video.date, 'dd.MM.yyyy HH:mm')}">Datum</span></p>
                                 <p class="has-text-black"><strong class="has-text-black">Dauer:</strong> <span th:text="${video.duration}">0:00</span></p>
+                                <p class="has-text-black"><strong class="has-text-black">Größe:</strong> <span th:text="${video.bytes} + ' Bytes'">1048576 Bytes</span></p>
+                                <p class="has-text-black"><strong class="has-text-black">Favorit:</strong> <span th:text="${video.favorite ? 'Ja' : 'Nein'}">Nein</span></p>
+                                <p class="has-text-black"><strong class="has-text-black">Kommentar:</strong> <span th:text="${video.comment}">Kein Kommentar vorhanden</span></p>
+
+                                <div class="buttons mt-3">
+                                    <a class="button is-small is-success mr-2" th:href="@{/features/live/{id}(id=${video._id})}">
+                                        <span class="icon"><i class="fas fa-play"></i></span>
+                                        <span>Abspielen</span>
+                                    </a>
+                                </div>
                             </div>
                             <div th:if="${video == null}">
                                 <p class="has-text-black">Noch kein Video</p>
@@ -121,8 +133,7 @@
                     </article>
                 </div>
 
-
-
+                <!-- Aktuellster Client -->
                 <div class="column is-6">
                     <article class="panel is-info">
                         <p class="panel-heading">
@@ -141,6 +152,7 @@
         </div>
     </main>
 </div>
+
 
 </body>
 </html>
