--- a/src/main/resources/templates/features/datastorage.html
+++ b/src/main/resources/templates/features/datastorage.html
@@ -73,7 +73,7 @@
               <td class="has-text-black" th:text="${video.name}">Beispielvideo.mp4</td>
               <td class="has-text-black" th:text="${video.path}">/media/video.mp4</td>
               <td class="has-text-black" th:text="${#temporals.format(video.date, 'dd.MM.yyyy HH:mm')}">01.01.2024</td>
-              <td class="has-text-black" th:text="${video.bytes} + ' Bytes'">1048576</td>
+              <td class="has-text-black" th:text="${video.mb} + ' MB'">1</td>
               <td class="has-text-black" th:text="${video.favorite ? 'Ja' : 'Nein'}">Ja</td>
               <td class="has-text-black" th:text="${video.clientPi.name}">ClientPi01</td>
               <td>
