--- a/src/main/resources/templates/features/datastorage.html
+++ b/src/main/resources/templates/features/datastorage.html
@@ -91,7 +91,7 @@
 
             <tr class="has-background-light" th:data-client-id="${video.clientPi._id}">
               <td colspan="9" class="has-text-black">
-                <strong>Kommentar:</strong> <span th:text="${video.comment}">Kein Kommentar vorhanden</span>
+                <strong class="has-text-black">Kommentar:</strong> <span th:text="${video.comment}">Kein Kommentar vorhanden</span>
               </td>
             </tr>
           </th:block>
