--- a/src/main/resources/templates/features/live.html
+++ b/src/main/resources/templates/features/live.html
@@ -91,7 +91,7 @@
             </tr>
             <tr>
               <th>Größe</th>
-              <td th:text="${video.mb} + ' MB'">1048576 MB</td>
+              <td th:text="${#numbers.formatDecimal(video.mb, 1, 2)} + ' MB'">1.00 MB</td>
             </tr>
             </tbody>
           </table>
