--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -157,31 +157,31 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <th:block th:each="client : ${clients}">
-                            <tr>
-                                <td class="has-text-black"  th:text="${clientStatusMap[client._id] ? 'Aktiv' : 'Inaktiv'}">Status</td>
-                                <td class="has-text-black" th:text="${client._id}">1</td>
-                                <td class="has-text-black" th:text="${client.name}">Beispielname</td>
-                              
+                    <th:block th:each="client : ${clients}">
+                        <tr>
+                            <td class="has-text-black"  th:text="${clientStatusMap[client._id] ? 'Aktiv' : 'Inaktiv'}">Status</td>
+                            <td class="has-text-black" th:text="${client._id}">ID</td>
+                            <td class="has-text-black" th:text="${client.name}">Name</td>
 
-                                <td>
-                                    <form th:action="@{/features/config/client/start/{_id}(_id=${client._id})}" method="post" style="display:inline;">
-                                        <button class="button is-small is-success" type="submit">
-                                            <span class="icon"><i class="fas fa-play"></i></span>
-                                            <span>Start</span>
-                                        </button>
-                                    </form>
-                                </td>
-                                <td>
-                                    <form th:action="@{/features/config/client/stop/{_id}(_id=${client._id})}" method="post" style="display:inline;">
-                                        <button class="button is-small is-danger" type="submit">
-                                            <span class="icon"><i class="fas fa-play"></i></span>
-                                            <span>Stop</span>
-                                        </button>
-                                    </form>
-                                </td>
-                            </tr>
-                        </th:block>
+                            <td>
+                                <form th:action="@{/features/config/client/start/{id}(id=${client._id})}" method="post">
+                                    <button type="submit" class="button is-small is-success">
+                                        <span class="icon"><i class="fas fa-play"></i></span>
+                                        <span>Start</span>
+                                    </button>
+                                </form>
+                            </td>
+                            <td>
+                                <form th:action="@{/features/config/client/stop/{id}(id=${client._id})}" method="post">
+                                    <button type="submit" class="button is-small is-danger">
+                                        <span class="icon"><i class="fas fa-stop"></i></span>
+                                        <span>Stop</span>
+                                    </button>
+                                </form>
+                            </td>
+                        </tr>
+                    </th:block>
+
                     </tbody>
                 </table>
             </div>
