--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -71,7 +71,7 @@
                 <div class="column is-6">
                     <div class="box">
                         <p class="heading">Socketstatus</p>
-                        <p class="title is-5">Verbindungsstatus</p>
+                        <p class="title is-5">Verbindungsstatus für das Empfangen von Videos</p>
 
                         <div th:if="${session.socket == true}">
                             <div class="notification is-success has-text-centered mt-4">
