--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,10 +51,7 @@
 
                             <div class="field is-grouped is-grouped-right" style="margin-left: auto;">
                                 <p class="control">
-                                    <button class="button is-link" type="submit">Auswählen</button>
-                                </p>
-                                <p class="control">
-                                    <a class="button is-danger" href="#">Abbrechen</a>
+                                    <button class="button is-danger" type="submit">Auswählen</button>
                                 </p>
                             </div>
                         </div>
